--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "dev": "bun --bun run next dev",
     "build": "bun --bun run next build",
     "start": "bun --bun run next start",
-    "lint": "bun --bun run eslint"
+    "lint": "bun --bun run eslint",
+    "db:generate": "bun --bun run drizzle-kit generate",
+    "db:migrate": "bun --bun run drizzle-kit migrate"
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
     "@phosphor-icons/react": "^2.1.10",
+    "better-auth": "^1.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^1.0.0-beta.11-05230d9",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
+    "postgres": "^3.4.8",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -27,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^1.0.0-beta.11-05230d9",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "tailwindcss": "^4",
